fix to footer spacing

--- a/sass/_boxes.scss
+++ b/sass/_boxes.scss
@@ -232,7 +232,7 @@ footer{
 footer, .footer, .real-footer{
   padding-top: 10px;
   border-top:#343333 1px solid;
-  margin-top: 20px;
+  margin:20px 0px 30px 0px;
 }
 .real-footer h4, .real-footer h6{
   margin:0;
