--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -26,8 +26,10 @@
   }
   .header-box .site-title{
     text-align: center;
-    bottom: inherit;
-    top:35px;
+    left: 25%;
+    top: 25%;
+    bottom:auto;
+    transform: translate(-15%, -15%);
   }
   .page-title{
     font-size: 70px;
@@ -63,6 +65,13 @@
   .sponsor{
      width: 30.6666666667%;
      float:left;
+     margin-left: 2%;
+  }
+  .sponsor:first-child{
+    margin-left: 0;
+  }
+  .sponsor:nth-child(4){
+    margin-left: 0;
   }
   .real-footer{
     text-align: center;
